FIXED THE ANNOYING GRAY BAR
The #header p had a margin of 50px which messed up the bar

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 html, body {
     padding: 0;
     margin: 0;
-    font-family: tahoma, verdana, sans-serif;
+    font-family: "Trebuchet MS", tahoma, verdana, sans-serif;
 	height: 100%;
 	background-color: #acacac;
 }
@@ -26,7 +26,7 @@ html, body {
 
 #banner {
 	width: 100%;
-	height: 200px;
+	height: 207px;
 	/*position: fixed;*/
 	/*overflow: hidden;*/
 	background-color: #acacac;
@@ -52,10 +52,12 @@ html, body {
 #nav_bar{
 	font-size: 30px;
 	width: 100%;
-	height: 40px;
-	background-color: black;
-	color: white;
+	height: 50px;
 	text-align: center;
+	padding-top:10px;
+	/*padding-bottom:10px;*/
+	color: white;
+	background-color: black;
 }
 
 #header{
@@ -64,6 +66,11 @@ html, body {
 	width: 100%;
 	height: 70px;
 	background-color: #a8b8e9;
+}
+
+#header p{
+	/*Fixes that annoying gray bar*/
+	margin:0px;
 }
 
 #table {
